Email authentication implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-application.mailing.frontend.activation-url= http://localhost:4200/verify_account
+application.mailing.frontend.activation-url= http://localhost:4200/activate-account
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
