--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.from.email=alavu.engineer19@gmail.com
+
+# Admin credentials
+admin.email=admin@gmail.com
+admin.password=admin
