--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,13 @@
 		</dependency>
 
 		<dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-websocket</artifactId>
+    	<version>3.3.4</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 		</dependency>
